# bdo_tools

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .python-version  AGENTS.md  LICENSE  Makefile  README.md  build_exe.py  coverage.toml  debug_gpu.py  debug_mem.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  ty.toml
.agent/: conventions.md  project_context.md
.agent/workflows/: build.md  development.md  run_tests.md
.github/workflows/: pytest.yml  release.yml  tests.yml
scripts/: ping_trace.py
src/: cli.py  config.py  main.py
src/bdo_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: __init__.py  optimizer.py
src/core/network/: __init__.py  ip_utils.py  latency.py  services.py
src/core/process/: __init__.py  affinity.py  priority.py  utils.py
src/domain/: models.py  services.py
src/gui/: window.py
src/gui/sections/: __init__.py  affinity.py  base.py  header.py  ip_resolver.py  latency.py  network_table.py  ping.py  priority.py  process.py
src/infrastructure/: disk.py  gpu.py  network.py  services_map.py  system.py
src/scripts/: get_bdo_ips.py  ping_host.py  ping_tcp.py  process_affinity.py  process_priority.py  process_utils.py
src/ui/: tray.py
src/ui/viewmodels/: main_viewmodel.py
src/ui/views/: main_window.py
tests/: test_disk.py  test_domain.py  test_gpu.py  test_infrastructure.py  test_ui.py  test_viewmodel.py
tests/core/network/: test_ip_utils.py  test_latency.py
tests/core/process/: test_affinity.py  test_priority.py  test_utils.py
tests/functional/: test_ui_functional.py
tests/integration/: test_gpu_integration.py  test_services_integration.py
tests/unit/: __init__.py  test_domain_models.py  test_viewmodel.py
