[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdo-tools"
version = "0.1.0"
description = "Utilities for monitoring and interacting with Black Desert Online processes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "main"]

[tool.setuptools.packages.find]
where = ["src"]
