[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdo-tools"
version = "1.0.3"
description = "Utilities for monitoring and interacting with Black Desert Online processes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "darkdetect>=0.8.0",
    "psutil>=5.9",
    "pyinstaller>=6.18.0",
    "sv-ttk>=2.6.1",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "nvidia-ml-py>=13.590.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "coverage",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "main"]

[tool.setuptools.packages.find]
where = ["src"]
