[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdo-tools"
version = "1.1.3"
description = "Utilities for monitoring and interacting with Black Desert Online processes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "darkdetect>=0.8.0",
    "psutil>=5.9",
    "pyinstaller>=6.18.0",
    "sv-ttk>=2.6.1",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "nvidia-ml-py>=13.590.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
